--- a/src/assets/scss/components/_sticky-nav.scss
+++ b/src/assets/scss/components/_sticky-nav.scss
@@ -14,6 +14,10 @@
   @include lib.glass();
   background: none;
 
+  @media screen and (prefers-color-scheme: dark) {
+    border: 1px solid var(--border-color);
+  }
+
   &>li {
     list-style: none;
     padding: 0;
@@ -46,6 +50,11 @@
         background: var(--accent-background);
         color: var(--accent-foreground);
       }
+
+      @media screen and (prefers-color-scheme: dark) {
+        border-right: 1px solid var(--border-color);
+      }
+
     }
 
     //SUBNAVS
@@ -58,6 +67,10 @@
       box-shadow: lib.$shadow;
       border-radius: .25em;
       overflow: hidden;
+
+      @media screen and (prefers-color-scheme: dark) {
+        border: 1px solid var(--border-color);
+      }
 
       li {
         list-style: none;
